--- a/automovil/views/automovil_views.xml
+++ b/automovil/views/automovil_views.xml
@@ -3,10 +3,10 @@
 
 
     <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
-    <menuitem id="automovil_menu_root" name="Automovil" sequence="10"/>
+    <menuitem id="automovil_menu_root" name="Automovil" sequence="10" />
 
     <!-- This Menu Item Must have a parent -->
-    <menuitem id="automovil_menu_categ" name="Automoviles" parent="automovil_menu_root" sequence="10"/>
+    <menuitem id="automovil_menu_categ" name="Automoviles" parent="automovil_menu_root" sequence="10" />
 
     <!-- model.name action window -->
     <record id="automovil_action" model="ir.actions.act_window">
@@ -17,44 +17,65 @@
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
                 Hola aqui puedes crear mas automoviles
-            </p><p>
+            </p>
+            <p>
                 No hemos encontrado ningun automovil.
             </p>
         </field>
     </record>
-<!-- This Menu Item must have a parent and an action -->
-<menuitem id="automovil_menu_act" name="Automovil" parent="automovil_menu_categ" action="automovil_action" sequence="10"/>
+    <!-- This Menu Item must have a parent and an action -->
+    <menuitem id="automovil_menu_act" name="Automovil" parent="automovil_menu_categ" action="automovil_action" sequence="10" />
 
-<!-- model.name tree view -->
-<record id="automovil_view_tree" model="ir.ui.view">
-    <field name="name">automovil.view.tree</field>
-    <field name="model">automovil</field>
-    <field name="arch" type="xml">
-        <tree>
-            <field name="name"/>
-            <field name="is_on"/>
-            <field name="velocity"/>
-            <field name="doors_number"/>
-        </tree>
-    </field>
-</record>
-<!-- model.name form view -->
-<record id="automovil_view_form" model="ir.ui.view">
-    <field name="name">automovil.view.form</field>
-    <field name="model">automovil</field>
-    <field name="arch" type="xml">
-        <form string="Automovil">
-            <sheet>
-                <group>
-                    <field name="name"/>
-                    <field name="doors_number"/>
-                    <field name="is_on"/>
-                    <field name="velocity"/>
-                    <field name="description"/>
-                </group>
-            </sheet>
-        </form>
-    </field>
-</record>
+    <!-- model.name tree view -->
+    <record id="automovil_view_tree" model="ir.ui.view">
+        <field name="name">automovil.view.tree</field>
+        <field name="model">automovil</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name" />
+                <field name="is_on" />
+                <field name="model_year" />
+                <field name="velocity" />
+                <field name="doors_number" />
+            </tree>
+        </field>
+    </record>
+    <!-- model.name form view -->
+    <record id="automovil_view_form" model="ir.ui.view">
+        <field name="name">automovil.view.form</field>
+        <field name="model">automovil</field>
+        <field name="arch" type="xml">
+            <form string="Automovil">
+                <sheet>
+                    <group>
+                        <field name="name" />
+                        <field name="is_on" />
+                        <field name="description" />
+                        <field name="last_service_day" />
+                        <field name="last_verification_day" />
+                        <field name="next_verification_day" />
+                        <field name="cylinder" />
+                        <field name="model_year" />
+                        <field name="velocity" />
+                    </group>
+                    <notebook colspan="4">
+                        <page string=" Doors">
+                            <group>
+                                <field name="doors_number" />
+                            </group>
+                        </page>
+                        <page string="Color">
+                            <group>
+                                <field name="color" />
+                            </group>
+                        </page>
+                    </notebook>
+                    <group>
+
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
 
 </odoo>
